<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">


    <TextView
        android:id="@+id/signInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="42dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:helperTextTextColor="?attr/colorError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/custom_edit_text_rounded"
            android:cursorVisible="false"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_horizontal"
            android:hint="@string/first_name_field_hint"
            android:inputType="textPersonName"
            android:lines="1"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text_field_title_color"
            android:textSize="11sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:helperTextTextColor="?attr/colorError"
        app:layout_constraintEnd_toEndOf="@+id/firstNameContainer"
        app:layout_constraintStart_toStartOf="@+id/firstNameContainer"
        app:layout_constraintTop_toBottomOf="@+id/firstNameContainer" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/custom_edit_text_rounded"
            android:cursorVisible="false"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/last_name_field_hint"
            android:inputType="textPersonName"
            android:lines="1"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text_field_title_color"
            android:textSize="11sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:helperTextTextColor="?attr/colorError"
        app:layout_constraintEnd_toEndOf="@+id/lastNameContainer"
        app:layout_constraintStart_toStartOf="@+id/lastNameContainer"
        app:layout_constraintTop_toBottomOf="@+id/lastNameContainer" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/custom_edit_text_rounded"
            android:cursorVisible="false"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/email_field_hint"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text_field_title_color"
            android:textSize="11sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/custom_button_rounded"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="@+id/emailContainer"
        app:layout_constraintStart_toStartOf="@+id/emailContainer"
        app:layout_constraintTop_toBottomOf="@+id/emailContainer" />

    <TextView
        android:id="@+id/hintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/already_have_an_account"
        android:textColor="@color/hint_color"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:id="@+id/logInLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/log_out"
        android:textColor="@color/link_color"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/hintText"
        app:layout_constraintStart_toEndOf="@+id/hintText"
        app:layout_constraintTop_toTopOf="@+id/hintText" />

    <LinearLayout
        android:id="@+id/googleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInLink">

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/google_icon"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/signInGoogleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_in_with_google"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/appleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/googleSignIn"
        app:layout_constraintTop_toBottomOf="@id/googleSignIn">

        <ImageView
            android:id="@+id/appleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/apple_icon"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/signInAppleTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_in_with_apple"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>